force-app/main/default/objects/sc_ext__Insight_Risk__c/sc_ext__Insight_Risk__c.object-meta.xml
<CustomObject>
    <label>Insight Risk</label>
    <nameField>
        <label>Insight Risk Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insight Risks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>