force-app/main/default/objects/sc_ext__Insight_Risk__c/fields/sc_ext__Insight_Key__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Insight_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Insight Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>