force-app/main/default/objects/sc_ext__Insight_Risk__c/fields/sc_ext__Risk_Rating__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Risk_Rating__c</fullName>
    <inlineHelpText>Deprecated. As of Scoring 2.0, custom risk rating is stored within Scoring_Policy__c.</inlineHelpText>
    <label>Risk Rating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>