force-app/main/default/objects/sc_ext__Insight_Risk__c/fields/sc_ext__Scoring_Policy__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Scoring_Policy__c</fullName>
    <inlineHelpText>A JSON format object required even for unscored insights. Includes custom scoring policy and risk rating configuration.</inlineHelpText>
    <label>Scoring Policy</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>